--- a/python-web_framework/templates/6-number_odd_or_even.html
+++ b/python-web_framework/templates/6-number_odd_or_even.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<HTML lang="en">
+  <HEAD>
     <meta charset="UTF-8">
-    <title>Number: {{ n }} is {{ odd_or_even }}</title>
-  </head>
-  <body>
-    <h1>Number: {{ n }} is {{ odd_or_even }}</h1>
-  </body>
-</html>
+    <TITLE>Number: {{ n }} is {{ odd_or_even }}</TITLE>
+  </HEAD>
+  <BODY>
+    <H1>Number: {{ n }} is {{ odd_or_even }}</H1>
+  </BODY>
+</HTML>
