--- a/python-web_framework/templates/6-number_odd_or_even.html
+++ b/python-web_framework/templates/6-number_odd_or_even.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="en">
   <HEAD>
-    <meta charset="UTF-8">
+    <META charset="UTF-8">
     <TITLE>Number: {{ n }} is {{ odd_or_even }}</TITLE>
   </HEAD>
   <BODY>
