--- a/python-web_framework/templates/6-number_odd_or_even.html
+++ b/python-web_framework/templates/6-number_odd_or_even.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <HTML lang="en">
   <HEAD>
-    <META charset="UTF-8">
-    <TITLE>Number: {{ n }} is {{ odd_or_even }}</TITLE>
+    <meta charset="UTF-8">
+    <TITLE>Number Odd or Even</TITLE>
   </HEAD>
   <BODY>
-    <H1>Number: {{ n }} is {{ odd_or_even }}</H1>
+    <H1>Number: {{ n }} is {% if n % 2 == 0 %}even{% else %}odd{% endif %}</H1>
   </BODY>
 </HTML>
